; ModuleID = '/home/carl/AnghaBench/linux/fs/hfs/extr_bnode.c_hfs_bnode_clear.c'
source_filename = "/home/carl/AnghaBench/linux/fs/hfs/extr_bnode.c_hfs_bnode_clear.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hfs_bnode = type { %struct.page**, i64 }
%struct.page = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @hfs_bnode_clear(%struct.hfs_bnode* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.hfs_bnode*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.page*, align 8
  store %struct.hfs_bnode* %0, %struct.hfs_bnode** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load %struct.hfs_bnode*, %struct.hfs_bnode** %4, align 8
  %9 = getelementptr inbounds %struct.hfs_bnode, %struct.hfs_bnode* %8, i32 0, i32 1
  %10 = load i64, i64* %9, align 8
  %11 = load i32, i32* %5, align 4
  %12 = sext i32 %11 to i64
  %13 = add nsw i64 %12, %10
  %14 = trunc i64 %13 to i32
  store i32 %14, i32* %5, align 4
  %15 = load %struct.hfs_bnode*, %struct.hfs_bnode** %4, align 8
  %16 = getelementptr inbounds %struct.hfs_bnode, %struct.hfs_bnode* %15, i32 0, i32 0
  %17 = load %struct.page**, %struct.page*** %16, align 8
  %18 = getelementptr inbounds %struct.page*, %struct.page** %17, i64 0
  %19 = load %struct.page*, %struct.page** %18, align 8
  store %struct.page* %19, %struct.page** %7, align 8
  %20 = load %struct.page*, %struct.page** %7, align 8
  %21 = call i64 @kmap(%struct.page* %20)
  %22 = load i32, i32* %5, align 4
  %23 = sext i32 %22 to i64
  %24 = add nsw i64 %21, %23
  %25 = load i32, i32* %6, align 4
  %26 = call i32 @memset(i64 %24, i32 0, i32 %25)
  %27 = load %struct.page*, %struct.page** %7, align 8
  %28 = call i32 @kunmap(%struct.page* %27)
  %29 = load %struct.page*, %struct.page** %7, align 8
  %30 = call i32 @set_page_dirty(%struct.page* %29)
  ret void
}

declare dso_local i32 @memset(i64, i32, i32) #1

declare dso_local i64 @kmap(%struct.page*) #1

declare dso_local i32 @kunmap(%struct.page*) #1

declare dso_local i32 @set_page_dirty(%struct.page*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
